hw-03/answer_exercise_1/nginx-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx-server
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-server
  template:
    metadata:
      labels:
        app: nginx-server
        version: v1.0
    spec:
      containers:
        - name: nginx
          image: nginx:1.19.4
          resources:
            requests:
              memory: '128Mi'
              cpu: '20m'
            limits:
              memory: '128Mi'
              cpu: '20m'
          ports:
            - containerPort: 80
